deploy/app-svc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs-app
  namespace: demo-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cs-app
  template:
    metadata:
      labels:
        app: cs-app
    spec:
      automountServiceAccountToken: false
      containers:
      - name: cs-app
        image: demo-cs:0.1
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "0.5Gi"
            cpu: "512m"
          requests:
            memory: "0.5Gi"
            cpu: "512m"
            ephemeral-storage: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-app
  namespace: demo-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: py-app
  template:
    metadata:
      labels:
        app: py-app
    spec:
      automountServiceAccountToken: false
      containers:
      - name: py-app
        image: demo-py:0.1
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "0.5Gi"
            cpu: "512m"
          requests:
            memory: "0.5Gi"
            cpu: "512m"
            ephemeral-storage: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: cs-svc
  namespace: demo-ns
spec:
  selector:
    app: cs-app
  ports:
    - name: http
      port: 5001
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: py-svc
  namespace: demo-ns
spec:
  selector:
    app: py-app
  ports:
    - name: http
      port: 6001
      targetPort: 6000
