deploy/demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs-app
  namespace: demo-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cs-app
  template:
    metadata:
      labels:
        app: cs-app
    spec:
      automountServiceAccountToken: false
      containers:
      - name: cs-app
        image: demo-cs:0.1
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "0.5Gi"
            cpu: "512m"
          requests:
            memory: "0.5Gi"
            cpu: "512m"
            ephemeral-storage: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-app
  namespace: demo-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: py-app
  template:
    metadata:
      labels:
        app: py-app
    spec:
      automountServiceAccountToken: false
      containers:
      - name: py-app
        image: demo-py:0.1
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "0.5Gi"
            cpu: "512m"
          requests:
            memory: "0.5Gi"
            cpu: "512m"
            ephemeral-storage: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo-ns
  name: cs-svc
spec:
  selector:
    app: cs-app
  ports:
    - port: 5001
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo-ns
  name: py-svc
spec:
  selector:
    app: py-app
  ports:
    - port: 6001
      targetPort: 6000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: demo-ns
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /cs(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cs-svc
            port:
              number: 5001
      - path: /py(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: py-svc
            port:
              number: 6001
