deploy/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: demo-ns
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /cs(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cs-svc
            port:
              number: 5001
      - path: /py(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: py-svc
            port:
              number: 6001
